--- a/samples/ChatInteractivo/PARTICULAS.cfg
+++ b/samples/ChatInteractivo/PARTICULAS.cfg
@@ -77,7 +77,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">cloud-hi.png</D>
+                <D type="TXT">mand-01.png</D>
             </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
