Fixed: gota.png not always working, fixed resizing to 256*256.

--- a/samples/CicloDelAgua/PRECIPITACION.cfg
+++ b/samples/CicloDelAgua/PRECIPITACION.cfg
@@ -60,7 +60,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">gota.png</D>
+                <D type="TXT">gota2.png</D>
             </VAL>
             <VAL>
                 <D type="TXT">clouds_0004_smoke_C.png</D>
@@ -82,9 +82,6 @@
         <PARAM name="blending" type="BLENDING">
             <VAL>
                 <D type="NUM">0</D>
-            </VAL>
-            <VAL>
-                <D type="NUM">5</D>
             </VAL>
         </PARAM>
         <PARAM name="width" type="NUM">
