--- a/samples/CicloDelAgua/SONIDO.cfg
+++ b/samples/CicloDelAgua/SONIDO.cfg
@@ -60,7 +60,7 @@
         </PARAM>
         <PARAM name="volume" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.06</D>
             </VAL>
         </PARAM>
         <PARAM name="balance" type="TRANSLATEX" property="published">
@@ -109,5 +109,7 @@
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE />
+    </PRECONFIGS>
 </MOCONFIG>
