--- a/basic/00_Image/erase.cfg
+++ b/basic/00_Image/erase.cfg
@@ -22,10 +22,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.0</D>
-                <D type="FUNCTION">0.0</D>
-                <D type="FUNCTION">0.0</D>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION" code="RED">0.0</D>
+                <D type="FUNCTION" code="GREEN">0.0</D>
+                <D type="FUNCTION" code="BLUE">0.0</D>
+                <D type="FUNCTION" code="ALPHA">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
