--- a/basic/00_Image/image.cfg
+++ b/basic/00_Image/image.cfg
@@ -3,12 +3,7 @@
     <DEFINITION name="image" class="image" />
     <UPDATE />
     <CONFIGPARAMS>
-        <PARAM name="inlet" type="INLET">
-            <VAL>
-                <D type="TXT">VARIABLE1</D>
-                <D type="TXT">NUMERIC</D>
-            </VAL>
-        </PARAM>
+        <PARAM name="inlet" type="INLET" />
         <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
             <VAL>
@@ -17,21 +12,15 @@
         </PARAM>
         <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.9</D>
             </VAL>
         </PARAM>
-        <PARAM name="color" type="COLOR">
+        <PARAM name="color" type="COLOR" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -48,12 +37,6 @@
             <VAL>
                 <D type="TXT">Default</D>
             </VAL>
-            <VAL>
-                <D type="TXT">Default</D>
-            </VAL>
-            <VAL>
-                <D type="TXT">Default</D>
-            </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
             <VAL>
@@ -64,127 +47,43 @@
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">time*4</D>
-            </VAL>
         </PARAM>
         <PARAM name="pos_text_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">time</D>
             </VAL>
         </PARAM>
         <PARAM name="anc_text_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
-            <VAL>
-                <D type="FUNCTION">3.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">20</D>
-            </VAL>
         </PARAM>
         <PARAM name="alt_text_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">2.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">15</D>
             </VAL>
         </PARAM>
         <PARAM name="pos_cuad_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">0.2+0.2*cos(time)</D>
-            </VAL>
         </PARAM>
         <PARAM name="pos_cuad_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">0.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">0.2+0.2*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="anc_cuad_x" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
-            <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">0.7</D>
-            </VAL>
         </PARAM>
         <PARAM name="alt_cuad_y" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
-            <VAL>
-                <D type="FUNCTION">1.0</D>
-            </VAL>
-            <VAL>
-                <D type="FUNCTION">0.7</D>
-            </VAL>
         </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS>
-        <PRE>
-            <P name="texture">0</P>
-            <P name="alpha">0</P>
-            <P name="anc_text_x">0</P>
-            <P name="alt_text_y">0</P>
-            <P name="pos_text_x">0</P>
-            <P name="pos_text_y">0</P>
-            <P name="pos_cuad_x">0</P>
-            <P name="pos_cuad_y">0</P>
-            <P name="anc_cuad_x">0</P>
-            <P name="alt_cuad_y">0</P>
-        </PRE>
-        <PRE>
-            <P name="texture">1</P>
-            <P name="alpha">1</P>
-            <P name="anc_text_x">1</P>
-            <P name="alt_text_y">1</P>
-            <P name="pos_text_x">1</P>
-            <P name="pos_text_y">1</P>
-            <P name="pos_cuad_x">1</P>
-            <P name="pos_cuad_y">1</P>
-            <P name="anc_cuad_x">1</P>
-            <P name="alt_cuad_y">1</P>
-        </PRE>
-        <PRE>
-            <P name="texture">2</P>
-            <P name="alpha">2</P>
-            <P name="anc_text_x">2</P>
-            <P name="alt_text_y">2</P>
-            <P name="pos_text_x">2</P>
-            <P name="pos_text_y">2</P>
-            <P name="pos_cuad_x">2</P>
-            <P name="pos_cuad_y">2</P>
-            <P name="anc_cuad_x">2</P>
-            <P name="alt_cuad_y">2</P>
-        </PRE>
     </PRECONFIGS>
 </MOCONFIG>
