Adding and updating basic projects. erase is animated for 00_Image, adding 08_Camera

--- a/basic/08_Camera/erase.cfg
+++ b/basic/08_Camera/erase.cfg
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<MOCONFIG majorversion="1969497900" minorversion="1769234802">
+<MOCONFIG majorversion="-1" minorversion="1779674216">
     <DEFINITION name="erase" class="moPreEffect" />
     <UPDATE />
     <CONFIGPARAMS>
@@ -9,7 +9,9 @@
                 <D type="TXT">NUMERIC</D>
             </VAL>
         </PARAM>
-        <PARAM name="outlet" type="OUTLET" />
+        <PARAM name="outlet" type="OUTLET">
+            <VAL />
+        </PARAM>
         <PARAM name="script" type="SCRIPT">
             <VAL>
                 <D type="TXT"></D>
@@ -22,7 +24,7 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION" code="RED">abs(cos(time))</D>
+                <D type="FUNCTION" code="RED">0.0</D>
                 <D type="FUNCTION" code="GREEN">0.0</D>
                 <D type="FUNCTION" code="BLUE">0.0</D>
                 <D type="FUNCTION" code="ALPHA">0.0</D>
