Default to default

--- a/basic/00_Image/image.cfg
+++ b/basic/00_Image/image.cfg
@@ -35,7 +35,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">Default</D>
+                <D type="TXT">default</D>
             </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
