Fixing missing images

--- a/taller/ChatInteractivo/PARTICULAS.cfg
+++ b/taller/ChatInteractivo/PARTICULAS.cfg
@@ -34,10 +34,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.019608</D>
-                <D type="FUNCTION">0.600000</D>
-                <D type="FUNCTION">0.160784</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">0.019608</D>
+                <D type="FUNCTION" code="GREEN">0.600000</D>
+                <D type="FUNCTION" code="BLUE">0.160784</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -52,10 +52,10 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -77,7 +77,13 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">mand-01.png</D>
+                <D type="TXT">cloud-hi.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">cloud-hi.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">cloud-hi.png</D>
             </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
@@ -124,8 +130,20 @@
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
         </PARAM>
         <PARAM name="viscosity" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.8</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0.8</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION">0.8</D>
             </VAL>
@@ -194,8 +212,20 @@
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
         </PARAM>
         <PARAM name="attractormode" type="NUM" options="ACCELERATION,STICK,BOUNCE,BREAKS,BRAKE,LINEAR">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -204,13 +234,31 @@
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
         </PARAM>
         <PARAM name="attractorvectory" type="FUNCTION">
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
         </PARAM>
         <PARAM name="attractorvectorz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
@@ -430,6 +478,65 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightmode" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lighty" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">4.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS />
+    <PRECONFIGS>
+        <PRE>
+            <P name="inlet">0</P>
+            <P name="texture">0</P>
+            <P name="gravity">0</P>
+            <P name="viscosity">0</P>
+            <P name="attractortype">0</P>
+            <P name="attractormode">0</P>
+            <P name="attractorvectorx">0</P>
+            <P name="attractorvectory">0</P>
+            <P name="attractorvectorz">0</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">1</P>
+            <P name="texture">1</P>
+            <P name="gravity">1</P>
+            <P name="viscosity">1</P>
+            <P name="attractortype">1</P>
+            <P name="attractormode">1</P>
+            <P name="attractorvectorx">1</P>
+            <P name="attractorvectory">1</P>
+            <P name="attractorvectorz">1</P>
+        </PRE>
+        <PRE>
+            <P name="inlet">2</P>
+            <P name="texture">2</P>
+            <P name="gravity">2</P>
+            <P name="viscosity">2</P>
+            <P name="attractortype">2</P>
+            <P name="attractormode">2</P>
+            <P name="attractorvectorx">2</P>
+            <P name="attractorvectory">2</P>
+            <P name="attractorvectorz">2</P>
+        </PRE>
+    </PRECONFIGS>
 </MOCONFIG>
