--- a/taller/ChatInteractivo/VIDEO.cfg
+++ b/taller/ChatInteractivo/VIDEO.cfg
@@ -20,10 +20,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -86,7 +86,7 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="moviemode" type="NUM">
+        <PARAM name="moviemode" type="NUM" options="VCR,SCRIPT,CYCLE,PLAYLIST,LAUNCH">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -96,7 +96,7 @@
                 <D type="NUM">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="startplaying" type="NUM">
+        <PARAM name="startplaying" type="NUM" options="OFF,ON">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -191,6 +191,16 @@
         <PARAM name="display_height" type="FUNCTION">
             <VAL>
                 <D type="FUNCTION">0.05</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="movielaunch" type="NUM" options="OFF,ON">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
