--- a/taller/ChatInteractivo/opencv.cfg
+++ b/taller/ChatInteractivo/opencv.cfg
@@ -55,7 +55,7 @@
                 <D type="TXT">default</D>
             </VAL>
         </PARAM>
-        <PARAM name="recognition_mode" type="NUM" options="Face,Gpu Motion,Blobs,Color">
+        <PARAM name="recognition_mode" type="NUM" options="Face,Gpu Motion,Contour,Color,Motion Detection,Blobs,Threshold">
             <VAL>
                 <D type="NUM">0</D>
             </VAL>
@@ -63,14 +63,14 @@
                 <D type="NUM">1</D>
             </VAL>
         </PARAM>
-        <PARAM name="threshold" type="NUM">
+        <PARAM name="threshold" type="FUNCTION">
             <VAL>
-                <D type="INT">50</D>
+                <D type="FUNCTION">50</D>
             </VAL>
         </PARAM>
-        <PARAM name="threshold_max" type="NUM">
+        <PARAM name="threshold_max" type="FUNCTION">
             <VAL>
-                <D type="INT">255</D>
+                <D type="FUNCTION">255</D>
             </VAL>
         </PARAM>
         <PARAM name="reduce_width" type="NUM">
@@ -87,6 +87,89 @@
             </VAL>
             <VAL>
                 <D type="INT">64</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="threshold_type" type="NUM" options="Binary,Binary Inverted,Threshold Truncated,To Zero,To Zero Inverted">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="line_thickness" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">2</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="line_color" type="COLOR">
+            <VAL>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="line_offset_x" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="line_offset_y" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="line_steps" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="crop_min_x" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="crop_max_x" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="crop_min_y" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="crop_max_y" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="motion_pixels" type="NUM">
+            <VAL>
+                <D type="INT">5</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="motion_deviation" type="NUM">
+            <VAL>
+                <D type="INT">20</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="blob_min_area" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1000</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="blob_max_area" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">50000</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="blob_min_distance" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">10</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="debug_on" type="NUM" options="Off,On,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
