--- a/taller/ChatInteractivo/oscout.cfg
+++ b/taller/ChatInteractivo/oscout.cfg
@@ -55,6 +55,11 @@
                 <D type="INT">1</D>
             </VAL>
         </PARAM>
+        <PARAM name="debug" type="NUM">
+            <VAL>
+                <D type="INT">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
     <PRECONFIGS />
 </MOCONFIG>
