--- a/taller/CicloDelAgua/AGUA.cfg
+++ b/taller/CicloDelAgua/AGUA.cfg
@@ -17,16 +17,16 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.705882</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">0.705882</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">0.309804</D>
-                <D type="FUNCTION">0.309804</D>
-                <D type="FUNCTION">0.309804</D>
-                <D type="FUNCTION">0.207843</D>
+                <D type="FUNCTION" code="RED">0.309804</D>
+                <D type="FUNCTION" code="GREEN">0.309804</D>
+                <D type="FUNCTION" code="BLUE">0.309804</D>
+                <D type="FUNCTION" code="ALPHA">0.207843</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -41,10 +41,10 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -432,6 +432,31 @@
         <PARAM name="orderingmode" type="NUM" options="NONE,ZDEPTHTEST,ZPOSITION,COMPLETE">
             <VAL>
                 <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightmode" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lighty" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">4.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
