--- a/taller/CicloDelAgua/CICLO.cfg
+++ b/taller/CicloDelAgua/CICLO.cfg
@@ -20,16 +20,16 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -121,6 +121,11 @@
             </VAL>
             <VAL>
                 <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
