--- a/taller/CicloDelAgua/erase.cfg
+++ b/taller/CicloDelAgua/erase.cfg
@@ -17,16 +17,16 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.149020</D>
-                <D type="FUNCTION">0.521569</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION" code="RED">0.149020</D>
+                <D type="FUNCTION" code="GREEN">0.521569</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">0.0</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.258824</D>
-                <D type="FUNCTION">0.164706</D>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">0.258824</D>
+                <D type="FUNCTION" code="BLUE">0.164706</D>
+                <D type="FUNCTION" code="ALPHA">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
