--- a/taller/ChatInteractivo/CAMARA.cfg
+++ b/taller/ChatInteractivo/CAMARA.cfg
@@ -20,10 +20,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -50,27 +50,27 @@
             <VAL>
                 <D type="NUM">640</D>
             </VAL>
-		</PARAM>
+        </PARAM>
         <PARAM name="height" type="NUM">
             <VAL>
                 <D type="NUM">480</D>
             </VAL>
-		</PARAM>
+        </PARAM>
         <PARAM name="color_bits" type="NUM" options="0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32">
-			<VAL>
-				<D type="NUM">24</D>
-			</VAL>
-		</PARAM>
+            <VAL>
+                <D type="NUM">24</D>
+            </VAL>
+        </PARAM>
         <PARAM name="scale_width" type="NUM">
-		    <VAL>
+            <VAL>
                 <D type="NUM">320</D>
             </VAL>
-		</PARAM>
+        </PARAM>
         <PARAM name="scale_height" type="NUM">
-		    <VAL>
+            <VAL>
                 <D type="NUM">240</D>
             </VAL>
-		</PARAM>
+        </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
                 <D type="TXT">default</D>
@@ -207,6 +207,21 @@
         <PARAM name="display_height" type="FUNCTION">
             <VAL>
                 <D type="FUNCTION">0.05</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="flip_horizontal" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="flip_vertical" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
