--- a/taller/CicloDelAgua/CONDENSACION.cfg
+++ b/taller/CicloDelAgua/CONDENSACION.cfg
@@ -17,10 +17,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">1.000000</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -35,10 +35,10 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">1.000000</D>
-                <D type="FUNCTION">0.090196</D>
+                <D type="FUNCTION" code="RED">1.000000</D>
+                <D type="FUNCTION" code="GREEN">1.000000</D>
+                <D type="FUNCTION" code="BLUE">1.000000</D>
+                <D type="FUNCTION" code="ALPHA">0.090196</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -420,6 +420,31 @@
         <PARAM name="orderingmode" type="NUM" options="NONE,ZDEPTHTEST,ZPOSITION,COMPLETE">
             <VAL>
                 <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightmode" type="NUM">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lighty" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">4.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="lightz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
