--- a/taller/CicloDelAgua/PAISAJE.cfg
+++ b/taller/CicloDelAgua/PAISAJE.cfg
@@ -17,10 +17,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -79,6 +79,11 @@
             </VAL>
             <VAL>
                 <D type="FUNCTION">0.35</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
