--- a/taller/CicloDelAgua/SONIDO.cfg
+++ b/taller/CicloDelAgua/SONIDO.cfg
@@ -17,10 +17,10 @@
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -60,7 +60,7 @@
         </PARAM>
         <PARAM name="volume" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.06</D>
+                <D type="FUNCTION">0.2</D>
             </VAL>
         </PARAM>
         <PARAM name="balance" type="TRANSLATEX" property="published">
@@ -106,6 +106,11 @@
         <PARAM name="launch" type="NUM">
             <VAL>
                 <D type="INT">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
