Cleaning sound samples

--- a/sound/Sound3D_Doppler/sound3d_W.cfg
+++ b/sound/Sound3D_Doppler/sound3d_W.cfg
@@ -15,7 +15,7 @@
                 <D type="TXT"></D>
             </VAL>
         </PARAM>
-        <PARAM name="alpha" type="ALPHA">
+        <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
                 <D type="FUNCTION">1.0</D>
             </VAL>
@@ -30,7 +30,7 @@
         </PARAM>
         <PARAM name="syncro" type="SYNC" property="published">
             <VAL>
-                <D type="FUNCTION">0.6</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">1</D>
@@ -82,7 +82,7 @@
         </PARAM>
         <PARAM name="pitch" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">1</D>
+                <D type="FUNCTION">0.64*syncro</D>
             </VAL>
             <VAL>
                 <D type="FUNCTION">1</D>
