Added nanoKONTROL string to devices, so it could work in windows

--- a/midi/00_MidiTest/image.cfg
+++ b/midi/00_MidiTest/image.cfg
@@ -92,7 +92,11 @@
                 <D type="FUNCTION">1.0*C14/127.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="guides" type="NUM" options="No,Yes,Full">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
     </CONFIGPARAMS>
-    <PRECONFIGS>
-    </PRECONFIGS>
+    <PRECONFIGS />
 </MOCONFIG>
