--- a/midi/00_MidiTest/midi.cfg
+++ b/midi/00_MidiTest/midi.cfg
@@ -28,7 +28,10 @@
                 <D type="TXT">nanoKONTROL MIDI 1</D>
                 <D type="INT">1</D>
             </VAL>
-
+            <VAL>
+                <D type="TXT">nanoKONTROL</D>
+                <D type="INT">1</D>
+            </VAL>
             <VAL>
                 <D type="TXT">BCR2000 MIDI 1</D>
                 <D type="INT">1</D>
