Fixing bad .mol

--- a/midi/00_MidiTest/midi.cfg
+++ b/midi/00_MidiTest/midi.cfg
@@ -10,11 +10,15 @@
                 <D type="TXT">NUMERIC</D>
                 <D type="TXT">image</D>
                 <D type="TXT">C02</D>
+                <D type="TXT">sound3d</D>
+                <D type="TXT">C02</D>
             </VAL>
             <VAL>
                 <D type="TXT">C14</D>
                 <D type="TXT">NUMERIC</D>
                 <D type="TXT">image</D>
+                <D type="TXT">C14</D>
+                <D type="TXT">sound3d</D>
                 <D type="TXT">C14</D>
             </VAL>
         </PARAM>
