Added shaders to mk for shader examples

--- a/samples/Makefile.am
+++ b/samples/Makefile.am
@@ -14,6 +14,7 @@ s2dir = ${samplesdir}/Snow_Particles
 s3dir = ${samplesdir}/Snow_Particles
 s4dir = ${samplesdir}/SimpleProject
 s5dir = ${samplesdir}/ShaderExample
+s5shdir = ${samplesdir}/ShaderExample/shaders
 s6dir = ${samplesdir}/Cameras
 s7dir = ${samplesdir}/CamerasCircular
 s8dir = ${samplesdir}/ChannelControl
@@ -28,6 +29,7 @@ dist_s2_DATA = Rain_Particles/*.*
 dist_s3_DATA = Snow_Particles/*.*
 dist_s4_DATA = SimpleProject/*.*
 dist_s5_DATA = ShaderExample/*.*
+dist_s5sh_DATA = ShaderExample/shaders/*.*
 dist_s6_DATA = Cameras/*.*
 dist_s7_DATA = CamerasCircular/*.*
 dist_s8_DATA = ChannelControl/*.*
