Fixing and removing files for make dist

--- a/taller/CicloDelAgua/AGUA.cfg
+++ b/taller/CicloDelAgua/AGUA.cfg
@@ -66,7 +66,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">PNG Water Ripple (16).png</D>
+                <D type="TXT">CHARCA.png</D>
             </VAL>
             <VAL>
                 <D type="TXT">ripples.png</D>
