--- a/taller/VisualArt/VIDEO.cfg
+++ b/taller/VisualArt/VIDEO.cfg
@@ -38,7 +38,7 @@
         </PARAM>
         <PARAM name="movies" type="TEXTURE">
             <VAL>
-                <D type="TXT">Anatomy In Animation.mp4</D>
+                <D type="TXT">Anatomy.mp4</D>
             </VAL>
             <VAL>
                 <D type="TXT">world_hold_on_bob_sinclair.mp4</D>
