--- a/taller/ChatInteractivo/VIDEO.cfg
+++ b/taller/ChatInteractivo/VIDEO.cfg
@@ -38,7 +38,7 @@
         </PARAM>
         <PARAM name="movies" type="TEXTURE">
             <VAL>
-                <D type="TXT">Anatomy In Animation.mp4</D>
+                <D type="TXT">Anatomy.mp4</D>
             </VAL>
         </PARAM>
         <PARAM name="sounds" type="SOUND">
